beginning of mobile

--- a/less/index.less
+++ b/less/index.less
@@ -72,6 +72,10 @@ header {
 	width: 100%;
 	display: flex;
 	margin-bottom: 25px;
+	@media(max-width: 500px) {
+		text-align: center;
+		
+		}
 	}
 	nav {
 		width: 100%;
