--- a/less/index.less
+++ b/less/index.less
@@ -61,16 +61,25 @@ html, body {
 
 // My Code
 
+// Variables
 @font-size: 1.3rem;
 @h1-size: 2.5rem;
 @h2-size: 1.3rem;
+// Mixin
+.flex100() {
+	display: flex;
+	width: 100%;
+}
+.mw500() {
+	max-width: 500px;
+
+}
 
 .container {
 	width: 800px;
 	margin: 0 auto;
 header {
-	width: 100%;
-	display: flex;
+	.flex100();
 	margin-bottom: 25px;
 	}
 	nav {
@@ -80,7 +89,7 @@ header {
 		display: flex;
 		justify-content: space-between;
 		@media(max-width: 500px) {
-			max-width: 500px;
+			.mw500();
 			width: 100%;
 			margin-left: auto;
 			margin-right: auto;
@@ -110,7 +119,7 @@ header {
 	height: 100px;
 	@media (max-width: 500px) {
 		align-items: center;
-		max-width: 500px;
+		.mw500();
 	}
 	h1 {
 		color: white;
@@ -236,9 +245,9 @@ header {
 }
 
 footer {
+	.flex100();
 	color: white;
 	font-size: @font-size - .5rem;
-	width: 100%;
 	height: 40px;
 	background: black;
 	margin-top: 50px;
@@ -247,6 +256,6 @@ footer {
 	@media(max-width) {
 		text-align: center;
 		width: 100%;
-		max-width: 500px;
+		.mw500();
 	}
 }
