--- a/css/index.css
+++ b/css/index.css
@@ -140,15 +140,20 @@ body {
   margin: 0 auto;
 }
 .container header {
-  width: 100%;
   display: flex;
+  width: 100%;
   margin-bottom: 25px;
 }
+@media (max-width: 500px) {
+  .container header {
+    margin-left: 40px;
+  }
+}
 .container nav {
+  display: flex;
   width: 100%;
   margin-top: 40px;
   margin-left: 55%;
-  display: flex;
   justify-content: space-between;
 }
 @media (max-width: 500px) {
@@ -200,6 +205,7 @@ body {
 @media (max-width: 500px) {
   .post-header h1 {
     font-size: 3rem;
+    text-shadow: 2px 2px 0px black, 6px 4px 0px #000000;
   }
 }
 .main-content {
