--- a/less/index.less
+++ b/less/index.less
@@ -65,15 +65,16 @@ html, body {
 @font-size: 1.3rem;
 @h1-size: 2.5rem;
 @h2-size: 1.3rem;
-// Mixin
+
+// Mixins
 .flex100() {
 	display: flex;
 	width: 100%;
 }
 .mw500() {
 	max-width: 500px;
-
 }
+
 
 .container {
 	width: 800px;
@@ -81,12 +82,14 @@ html, body {
 header {
 	.flex100();
 	margin-bottom: 25px;
+	@media(max-width:500px) {
+		margin-left: 40px;
+	}
 	}
 	nav {
-		width: 100%;
+		.flex100();
 		margin-top: 40px;
 		margin-left: 55%;
-		display: flex;
 		justify-content: space-between;
 		@media(max-width: 500px) {
 			.mw500();
@@ -130,6 +133,7 @@ header {
 		text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(0,0,0,0.15);
 		@media (max-width: 500px) {
 			font-size: 3rem;
+			text-shadow: 2px 2px 0px black, 6px 4px 0px rgba(0,0,0,15);
 		}
 	}
 }
@@ -245,9 +249,9 @@ header {
 }
 
 footer {
-	.flex100();
 	color: white;
 	font-size: @font-size - .5rem;
+	width: 100%;
 	height: 40px;
 	background: black;
 	margin-top: 50px;
@@ -256,6 +260,6 @@ footer {
 	@media(max-width) {
 		text-align: center;
 		width: 100%;
-		.mw500();
+		max-width: 500px;
 	}
 }
